all: Refactors Oathkeeper into new ecosystem (#60)
