# docs/api.swagger.json
@@ -68,6 +68,24 @@
         ],
         "summary": "List all rules",
         "operationId": "listRules",
+        "parameters": [
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "Limit",
+            "description": "The maximum amount of rules returned.",
+            "name": "limit",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "Offset",
+            "description": "The offset from where to start looking.",
+            "name": "offset",
+            "in": "query"
+          }
+        ],
         "responses": {
           "200": {
             "$ref": "#/responses/rules"
@@ -268,6 +286,256 @@
     }
   },
   "definitions": {
+    "AuthenticationOAuth2ClientCredentialsRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "description": "Token is the token to introspect.",
+          "type": "string",
+          "x-go-name": "ClientID"
+        },
+        "scope": {
+          "description": "Scopes is an array of scopes that are required.",
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Scopes"
+        },
+        "secret": {
+          "type": "string",
+          "x-go-name": "ClientSecret"
+        }
+      },
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "AuthenticationOAuth2IntrospectionRequest": {
+      "type": "object",
+      "properties": {
+        "scope": {
+          "description": "Scopes is an array of scopes that are required.",
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Scopes"
+        },
+        "token": {
+          "description": "Token is the token to introspect.",
+          "type": "string",
+          "x-go-name": "Token"
+        }
+      },
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "Authenticator": {
+      "type": "object",
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "IntrospectionResponse": {
+      "type": "object",
+      "properties": {
+        "active": {
+          "type": "boolean",
+          "x-go-name": "Active"
+        },
+        "aud": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Audience"
+        },
+        "client_id": {
+          "type": "string",
+          "x-go-name": "ClientID"
+        },
+        "exp": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "ExpiresAt"
+        },
+        "ext": {
+          "description": "Session represents arbitrary session data.",
+          "type": "object",
+          "additionalProperties": {
+            "type": "object"
+          },
+          "x-go-name": "Extra"
+        },
+        "iat": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "IssuedAt"
+        },
+        "iss": {
+          "type": "string",
+          "x-go-name": "Issuer"
+        },
+        "nbf": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "NotBefore"
+        },
+        "scope": {
+          "type": "string",
+          "x-go-name": "Scope"
+        },
+        "sub": {
+          "description": "Here, it's sub",
+          "type": "string",
+          "x-go-name": "Subject"
+        },
+        "username": {
+          "type": "string",
+          "x-go-name": "Username"
+        }
+      },
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "OAuth2ClientCredentialsAuthentication": {
+      "type": "object",
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "OAuth2IntrospectionAuthentication": {
+      "type": "object",
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "Session": {
+      "type": "object",
+      "properties": {
+        "GetSubject": {
+          "type": "string"
+        }
+      },
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "Upstream": {
+      "type": "object",
+      "properties": {
+        "preserve_host": {
+          "description": "PreserveHost, if false (the default), tells ORY Oathkeeper to set the upstream request's Host header to the\nhostname of the API's upstream's URL. Setting this flag to true instructs ORY Oathkeeper not to do so.",
+          "type": "boolean",
+          "x-go-name": "PreserveHost"
+        },
+        "strip_path": {
+          "description": "StripPath if set, replaces the provided path prefix when forwarding the requested URL to the upstream URL.",
+          "type": "string",
+          "x-go-name": "StripPath"
+        },
+        "url": {
+          "description": "URL is the URL the request will be proxied to.",
+          "type": "string",
+          "x-go-name": "URL"
+        }
+      },
+      "x-go-package": "github.com/ory/oathkeeper/rule"
+    },
+    "authenticationDefaultSession": {
+      "type": "object",
+      "properties": {
+        "allowed": {
+          "description": "Allowed is true if the request is allowed and false otherwise.",
+          "type": "boolean",
+          "x-go-name": "Allowed"
+        },
+        "subject": {
+          "description": "Subject is the identity that authorized issuing the token, for example a user or an OAuth2 app.\nThis is usually a uuid but you can choose a urn or some other id too.",
+          "type": "string",
+          "x-go-name": "Subject"
+        }
+      },
+      "x-go-name": "DefaultSession",
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "authenticationOAuth2ClientCredentialsSession": {
+      "type": "object",
+      "properties": {
+        "allowed": {
+          "description": "Allowed is true if the request is allowed and false otherwise.",
+          "type": "boolean",
+          "x-go-name": "Allowed"
+        },
+        "subject": {
+          "description": "Subject is the identity that authorized issuing the token, for example a user or an OAuth2 app.\nThis is usually a uuid but you can choose a urn or some other id too.",
+          "type": "string",
+          "x-go-name": "Subject"
+        }
+      },
+      "x-go-name": "OAuth2ClientCredentialsSession",
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
+    "authenticationOAuth2Session": {
+      "type": "object",
+      "properties": {
+        "allowed": {
+          "description": "Allowed is true if the request is allowed and false otherwise.",
+          "type": "boolean",
+          "x-go-name": "Allowed"
+        },
+        "audience": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Audience"
+        },
+        "client_id": {
+          "description": "ClientID is the id of the OAuth2 client that requested the token.",
+          "type": "string",
+          "x-go-name": "ClientID"
+        },
+        "expires_at": {
+          "description": "ExpiresAt is the expiry timestamp.",
+          "type": "string",
+          "format": "date-time",
+          "x-go-name": "ExpiresAt"
+        },
+        "granted_scope": {
+          "description": "GrantedScopes is a list of scopes that the subject authorized when asked for consent.",
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "GrantedScopes"
+        },
+        "issued_at": {
+          "description": "IssuedAt is the token creation time stamp.",
+          "type": "string",
+          "format": "date-time",
+          "x-go-name": "IssuedAt"
+        },
+        "issuer": {
+          "description": "Issuer is the id of the issuer, typically an hydra instance.",
+          "type": "string",
+          "x-go-name": "Issuer"
+        },
+        "not_before": {
+          "type": "string",
+          "format": "date-time",
+          "x-go-name": "NotBefore"
+        },
+        "session": {
+          "description": "Session represents arbitrary session data.",
+          "type": "object",
+          "additionalProperties": {
+            "type": "object"
+          },
+          "x-go-name": "Extra"
+        },
+        "subject": {
+          "description": "Subject is the identity that authorized issuing the token, for example a user or an OAuth2 app.\nThis is usually a uuid but you can choose a urn or some other id too.",
+          "type": "string",
+          "x-go-name": "Subject"
+        },
+        "username": {
+          "type": "string",
+          "x-go-name": "Username"
+        }
+      },
+      "x-go-name": "OAuth2Session",
+      "x-go-package": "github.com/ory/oathkeeper/vendor/github.com/ory/keto/authentication"
+    },
     "jsonWebKey": {
       "type": "object",
       "properties": {
@@ -367,57 +635,78 @@
       "x-go-package": "github.com/ory/oathkeeper/rsakey"
     },
     "rule": {
-      "description": "A rule",
       "type": "object",
+      "title": "swaggerRule is a single rule that will get checked on every HTTP request.",
       "properties": {
+        "authenticators": {
+          "description": "Authenticators is a list of authentication handlers that will try and authenticate the provided credentials.\nAuthenticators are checked iteratively from index 0 to n and if the first authenticator to return a positive\nresult will be the one used.\n\nIf you want the rule to first check a specific authenticator  before \"falling back\" to others, have that authenticator\nas the first item in the array.",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ruleHandler"
+          },
+          "x-go-name": "Authenticators"
+        },
+        "authorizer": {
+          "$ref": "#/definitions/ruleHandler"
+        },
+        "credentials_issuer": {
+          "$ref": "#/definitions/ruleHandler"
+        },
         "description": {
-          "description": "A human readable description of this rule.",
+          "description": "Description is a human readable description of this rule.",
           "type": "string",
           "x-go-name": "Description"
         },
         "id": {
-          "description": "The ID is the unique id of the rule. It can be at most 190 characters long, but the layout of the ID is up to you.\nYou will need this ID later on to update or delete the rule.",
+          "description": "ID is the unique id of the rule. It can be at most 190 characters long, but the layout of the ID is up to you.\nYou will need this ID later on to update or delete the rule.",
           "type": "string",
           "x-go-name": "ID"
         },
-        "matchesMethods": {
+        "match": {
+          "$ref": "#/definitions/ruleMatch"
+        },
+        "upstream": {
+          "$ref": "#/definitions/Upstream"
+        }
+      },
+      "x-go-name": "swaggerRule",
+      "x-go-package": "github.com/ory/oathkeeper/rule"
+    },
+    "ruleHandler": {
+      "type": "object",
+      "properties": {
+        "config": {
+          "description": "Config contains the configuration for the handler. Please read the user\nguide for a complete list of each handler's available settings.",
+          "type": "string",
+          "x-go-name": "Config"
+        },
+        "handler": {
+          "description": "Handler identifies the implementation which will be used to handle this specific request. Please read the user\nguide for a complete list of available handlers.",
+          "type": "string",
+          "x-go-name": "Handler"
+        }
+      },
+      "x-go-name": "swaggerRuleHandler",
+      "x-go-package": "github.com/ory/oathkeeper/rule"
+    },
+    "ruleMatch": {
+      "type": "object",
+      "properties": {
+        "methods": {
           "description": "An array of HTTP methods (e.g. GET, POST, PUT, DELETE, ...). When ORY Oathkeeper searches for rules\nto decide what to do with an incoming request to the proxy server, it compares the HTTP method of the incoming\nrequest with the HTTP methods of each rules. If a match is found, the rule is considered a partial match.\nIf the matchesUrl field is satisfied as well, the rule is considered a full match.",
           "type": "array",
           "items": {
             "type": "string"
           },
-          "x-go-name": "MatchesMethods"
+          "x-go-name": "Methods"
         },
-        "matchesUrl": {
+        "url": {
           "description": "This field represents the URL pattern this rule matches. When ORY Oathkeeper searches for rules\nto decide what to do with an incoming request to the proxy server, it compares the full request URL\n(e.g. https://mydomain.com/api/resource) without query parameters of the incoming\nrequest with this field. If a match is found, the rule is considered a partial match.\nIf the matchesMethods field is satisfied as well, the rule is considered a full match.\n\nYou can use regular expressions in this field to match more than one url. Regular expressions are encapsulated in\nbrackets \u003c and \u003e. The following example matches all paths of the domain `mydomain.com`: `https://mydomain.com/\u003c.*\u003e`.\n\nFor more information refer to: https://ory.gitbooks.io/oathkeeper/content/concepts.html#rules",
           "type": "string",
-          "x-go-name": "MatchesURL"
-        },
-        "mode": {
-          "description": "Defines which mode this rule should use. There are four valid modes:\n\nbypass: If set, any authorization logic is completely disabled and the Authorization header is not changed at all.\nThis is useful if you have an endpoint that has it's own authorization logic, for example using basic authorization.\nIf set to true, this setting overrides `basicAuthorizationModeEnabled` and `allowAnonymousModeEnabled`.\nanonymous: If set, the protected endpoint is available to anonymous users. That means that the endpoint is accessible\nwithout having a valid access token. This setting overrides `basicAuthorizationModeEnabled`.\ntoken: If set, disables checks against ORY Hydra's Warden API and uses basic authorization. This means that\nthe access token is validated (e.g. checking if it is expired, check if it claimed the necessary scopes)\nbut does not use the `requiredAction` and `requiredResource` fields for advanced access control.\npolicy: If set, uses ORY Hydra's Warden API for access control using access control policies.",
-          "type": "string",
-          "x-go-name": "Mode"
-        },
-        "requiredAction": {
-          "description": "This field will be used to decide advanced authorization requests where access control policies are used. A\naction is typically something a user wants to do (e.g. write, read, delete).\nThis field supports expansion as described in the developer guide: https://ory.gitbooks.io/oathkeeper/content/concepts.html#rules",
-          "type": "string",
-          "x-go-name": "RequiredAction"
-        },
-        "requiredResource": {
-          "description": "This field will be used to decide advanced authorization requests where access control policies are used. A\nresource is typically something a user wants to access (e.g. printer, article, virtual machine).\nThis field supports expansion as described in the developer guide: https://ory.gitbooks.io/oathkeeper/content/concepts.html#rules",
-          "type": "string",
-          "x-go-name": "RequiredResource"
-        },
-        "requiredScopes": {
-          "description": "An array of OAuth 2.0 scopes that are required when accessing an endpoint protected by this rule.\nIf the token used in the Authorization header did not request that specific scope, the request is denied.",
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "x-go-name": "RequiredScopes"
+          "x-go-name": "URL"
         }
       },
-      "x-go-name": "jsonRule",
+      "x-go-name": "swaggerRuleMatch",
       "x-go-package": "github.com/ory/oathkeeper/rule"
     },
     "swaggerCreateRuleParameters": {
@@ -439,6 +728,24 @@
           "description": "in: path",
           "type": "string",
           "x-go-name": "ID"
+        }
+      },
+      "x-go-package": "github.com/ory/oathkeeper/rule"
+    },
+    "swaggerListRulesParameters": {
+      "type": "object",
+      "properties": {
+        "limit": {
+          "description": "The maximum amount of rules returned.\nin: query",
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Limit"
+        },
+        "offset": {
+          "description": "The offset from where to start looking.\nin: query",
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Offset"
         }
       },
       "x-go-package": "github.com/ory/oathkeeper/rule"
